refact: replace usage of Arrays.asList with List.of